postgresql-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: postgresql
---
kind: Endpoints
apiVersion: v1
metadata:
  name: postgresql
subsets:
  - addresses:
      - ip: 172.20.0.1
    ports:
      - port: 5432
        name: postgresql
