consul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: consul
  name: consul-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: consul-server
          servicePort: 8500
