postgresql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: portainer
  name: portainer-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: postgresql
            port:
              number: 5432
